--- a/Project Presentation January 2022/main.tex
+++ b/Project Presentation January 2022/main.tex
@@ -89,7 +89,7 @@
 \author{Hitesh A H} % Your name
 \institute[Government Engineering College, Barton Hill] % Your institution as it will appear on the bottom of every slide, may be shorthand to save space
 {
-\textit{TRV20ECSP14, Signal Processing} \\\textit{Department of Electronics and Communication Engineering} \\ % Your institution for the title page
+\textit{TRV20ECSPXX, Signal Processing} \\\textit{Department of Electronics and Communication Engineering} \\ % Your institution for the title page
 \medskip
 %\textit{bofu20131@163.com} % Your email address
 }
