--- a/Sample Question Paper- Control System MCQ/Question_Paper_Control_System_MCQ.tex
+++ b/Sample Question Paper- Control System MCQ/Question_Paper_Control_System_MCQ.tex
@@ -6,7 +6,7 @@
 %\printanswers %Comment this line to print only questions
 \author{}
 \pdfinfo{
-   /Author (Arunima Prasad JS)
+   /Author (Author 2)
    /CreationDate (D:2022010100000)
    /Keywords (CS, GECBH, ECE)
 }
